--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= image_path "annie-picture1.jpg" %>);">
+  <div class="banner-content btm-margin">
+    <h1>Wright Piano School</h1>
+    <p>Learn from the best! The Hague, Rotterdam, Utrecht, Leiden, Amsterdam</p>
+    <a class="btn btn-primary btn-lg">Apply Now!</a>
+  </div>
+</div>
