add student application form and other things

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,7 +1,13 @@
 <div class="container">
+<div class="text-center">
   <% if @teacher.photo? %>
-    <%= cl_image_tag @teacher.photo.path, width: 300, height: 400, crop: :fill, gravity: :face %>
+    <div class="teacher-pic">
+    <%= cl_image_tag @teacher.photo.path, width: 250, height: 350, crop: :fill, gravity: :face %></div>
   <% end %>
+  <div class="row">
+<button type="button" class="btn btn-info" data-toggle="modal" data-target="#contact">Contact</button>
+<span class="btn btn-primary">Sign up for a trial lesson!</span></div>
+</div>
   <h1><%= "#{@teacher.first_name} #{@teacher.last_name}" %></h1>
   <ul>
   <% @teacher.degrees.each do |degree| %>
@@ -9,8 +15,42 @@
   <% end %>
   </ul>
   <p>Languages: <%= @teacher.languages %></p>
+  <p>Location/region: <%= @teacher.location %></p>
   <h3>Biography</h3>
   <% @teacher.paragraphs.each do |paragraph| %>
     <p><%= paragraph.content %></p>
   <% end %>
+
+
+  <div id="contact" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Send <%= @teacher.first_name %> a message!</h4>
+      </div>
+      <div class="modal-body">
+        <p>Please also feel free to call <%= @teacher.first_name %> at <%= @teacher.phone %>.</p>
+        <%= simple_form_for @message do |f| %>
+          <%= f.input :email, required: true, placeholder: "Your email address", label: false %>
+          <%= f.input :phone, placeholder: "Your phone number (optional)", label: false %>
+          <%= f.input :content, label: "Message", input_html: { rows: 7 }%>
+          <%= f.hidden_field :teacher_id, value: @teacher.id %>
+        </div>
+        <div class="modal-footer">
+        <%= button_tag(type: 'submit', class: "btn btn-primary") do %>Send Message <% end %>
+          <% end %>
+      </div>
+    </div>
+
+  </div>
 </div>
+</div>
+
+<%= content_for (:after_js) do %>
+<script>
+
+</script>
+<% end %>
