add apply link and student form

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,6 +15,7 @@
       <%= link_to "Teachers", teachers_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Contact", contact_pages_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Videos", videos_pages_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Apply!", new_student_path, class: "navbar-wagon-time navbar-wagon-link btn btn-warning" %>
 
       <!-- Avatar with dropdown menu -->
 
