--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,6 @@
   <div class="banner-content btm-margin">
     <h1>Wright Piano School</h1>
     <p>Learn from the best! The Hague, Rotterdam, Utrecht, Leiden, Amsterdam</p>
-    <a class="btn btn-primary btn-lg">Apply Now!</a>
+    <%= link_to "Apply Now!", new_student_path, class: "btn btn-primary btn-lg" %>
   </div>
 </div>
