add link to update profile for teacher when logged in with same email

--- a/app/views/teachers/_teachers_form.html.erb
+++ b/app/views/teachers/_teachers_form.html.erb
@@ -5,6 +5,9 @@
 <%= f.input :email %>
 <%= f.input :languages %>
 <%= f.input :location %>
+<% if current_user.email == "prestoassai@hotmail.com" %>
+  <%= f.input :rank %>
+<% end %>
 <%= f.input :photo, as: :attachinary %>
 <h3>Bio Paragraphs</h3>
 <div id="paragraphs">
