--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -1,3 +1,6 @@
 <div class="container">
 <%= render 'teachers_form' %>
 </div>
+
+<%= link_to "log out", destroy_user_session_path, method: :delete %>
+
