add mailer with gmail

--- a/app/views/students/_student_child_fields.html.erb
+++ b/app/views/students/_student_child_fields.html.erb
@@ -3,5 +3,5 @@
   <%= f.input :last_name %>
   <%= f.input :birthdate %>
   <%= f.input :experience, placeholder: "please describe any previous musical experience, if any" %>
-  <%= link_to_remove_association "remove degree", f %>
+  <%= link_to_remove_association "remove child", f %>
 </div>
