add teacher message

--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <h1>Teachers</h1>
-
+<p>Please click on a teacher to display their full information!</p>
 
 <div class="container">
   <div class="row">
