update application form fields

--- a/app/views/students/_student_form.html.erb
+++ b/app/views/students/_student_form.html.erb
@@ -4,6 +4,8 @@
 <%= f.input :last_name %>
 <%= f.input :phone %>
 <%= f.input :email %>
+<%= f.input :address %>
+<%= f.input :zip_code %>
 <%= f.input :languages %>
 <%= f.input :in_home, label: "Please indicate whether you would like lessons at your home, or at the teacher's location" %>
 <%= f.input :times, label: "Times available (list as many as possible)" %>
