update application form

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -9,6 +9,8 @@
   <h3>Locations/regions:</h3>
   <p>Utrecht</p>
   <p>Den Haag</p>
+  <p>Gouda</p>
+  <p>Alphen aan den Rijn</p>
   <p>Rotterdam</p>
   <p>Amsterdam</p>
   <p>Leiden</p>
