--- a/app/views/students/_student_child_fields.html.erb
+++ b/app/views/students/_student_child_fields.html.erb
@@ -1,7 +1,7 @@
 <div class="nested-fields">
-  <%= f.input :first_name %>
-  <%= f.input :last_name %>
-  <%= f.input :birthdate %>
-  <%= f.input :experience, placeholder: "please describe any previous musical experience, if any" %>
+  <%= f.input :first_name, label: false, placeholder: "First Name" %>
+  <%= f.input :last_name, label: false, placeholder: "Last Name" %>
+  <%= f.input :birthdate, label: false, placeholder: "Birthdate dd/mm/yyyy" %>
+  <%= f.input :experience, label: false, placeholder: "Please describe any previous musical experience, if any" %>
   <%= link_to_remove_association "remove child", f %>
 </div>
