--- a/app/views/students/_student_form.html.erb
+++ b/app/views/students/_student_form.html.erb
@@ -1,15 +1,15 @@
-<p>Please fill in this application form to schedule a trial lesson.</p>
+<p>Fill in this application for a free trial lesson!</p>
 <%= simple_form_for @student do |f| %>
-<%= f.input :first_name %>
-<%= f.input :last_name %>
-<%= f.input :phone %>
-<%= f.input :email %>
-<%= f.input :address %>
-<%= f.input :zip_code %>
-<%= f.input :languages %>
-<%= f.input :in_home, label: "Please indicate whether you would like lessons at your home, or at the teacher's location" %>
-<%= f.input :times, label: "Times available (list as many as possible)" %>
-<h3>Add children (optional)</h3>
+<%= f.input :first_name, label: false, placeholder: "Parent First Name"%>
+<%= f.input :last_name, label: false, placeholder: "Parent Last Name" %>
+<%= f.input :phone, label: false, placeholder: "Phone Number" %>
+<%= f.input :email, label: false, placeholder: "Email" %>
+<%= f.input :address, label: false, placeholder: "Address" %>
+<%= f.input :zip_code, label: false, placeholder: "Zip code" %>
+<%= f.input :languages, label: false, placeholder: "Preferred language of instruction (English, Dutch, German etc.)" %>
+<%= f.input :in_home, label: false, placeholder: "Please indicate whether you would like lessons at your home, or at the teacher's location" %>
+<%= f.input :times, label: false, placeholder: "Times available (list as many as possible)" %>
+<h3>Add student</h3>
 <div id="student_children">
   <%= f.simple_fields_for :student_children do |student_child| %>
     <%= render 'student_child_fields', f: student_child %>
@@ -19,6 +19,7 @@
   </div>
 </div>
 <br>
-<%= f.input :notes %>
+<%= f.input :notes, label: false, placeholder: "Notes" %>
+<%= f.input :referral, label: "How did you hear about us?", collection: ["Google search", "Word-of-mouth referral", "Poster / flyer", "Competition, masterclass, or other activity", "Other"] %>
 <%= f.button :submit, "Send Application", class: "btn btn-primary" %>
 <% end %>
