add mailer to student application form

--- a/app/views/student_mailer/welcome.html.erb
+++ b/app/views/student_mailer/welcome.html.erb
@@ -1,9 +1,11 @@
-<p>Hi <%= @student.first_name %>,</p>
+<p>Dear <%= @student.first_name %>,</p>
 <br>
 <p>Thanks for submitting the application form. We will contact you soon about scheduling a trial lesson!</p>
 <br>
-<p>Andrew Wright</p>
-<p>0639591941</p>
+<p>dr. Andrew Wright</p>
+<p>www.wrightpianoschool.com</p>
+<p>info@wrightpianoschool.com</p>
+<p>+31639591941</p>
 <br>
 <!-- <p>Your information</p>
 <p><%= "#{@student.first_name} #{@student.last_name}" %></p>
