--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,6 +5,8 @@
   background-position: center;
   color: white;
   position: relative;
+  margin-bottom: 27px;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
 }
 .card-user {
   position: absolute;
