--- a/app/views/student_mailer/contact.txt.erb
+++ b/app/views/student_mailer/contact.txt.erb
@@ -1,6 +1,7 @@
 Message for <%= "#{@message.teacher.first_name} #{@message.teacher.last_name}" %>
 <br>
 From <br>
+<%= @message.name %> <br>
 <%= @message.email %> <br>
 <%= @message.phone %> <br>
 <%= @message.content %>
