--- a/app/views/pages/policy.html.erb
+++ b/app/views/pages/policy.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Studio Policy - Piano Lessons</h1>
   <p>Please examine the studio policy carefully. It includes prices, information about cancellations and make-up lessons, and many other details. Feel free to call us and ask if you have any questions!</p>
-  <p><%= link_to "Studio Policy 2017 - 2018", download_policy_pages_path %></p>
+  <p><%= link_to "Studio Policy 2017 - 2018", download_policy_pages_path, "data-turbolinks": false %></p>
 </p>
 </div>
