--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,17 +1,27 @@
-<div class="container">
-  <h1>Contact</h1>
-  <p>Wright Piano School</p>
-  <p>Pasteurstraat 340</p>
-  <p>2522RX Den Haag</p>
-  <p>+31639591941</p>
-  <p>wrightpianoschool@gmail.com</p>
-  <p></p>
-  <h3>Locations/regions:</h3>
-  <p>Utrecht</p>
-  <p>Den Haag</p>
-  <p>Gouda</p>
-  <p>Alphen aan den Rijn</p>
-  <p>Rotterdam</p>
-  <p>Amsterdam</p>
-  <p>Leiden</p>
+<%= render 'shared/navbar' %>
+<%= render 'shared/flashes' %>
+<div class="main-container">
+   <section>
+      <div class="container">
+         <div class="row justify-content-center text-center section-intro">
+            <div class="col-12 col-md-9 col-lg-8">
+               <h1>Contact</h1>
+               <p>Wright Piano School</p>
+               <p>Pasteurstraat 340</p>
+               <p>2522RX Den Haag</p>
+               <p>+31639591941</p>
+               <p>wrightpianoschool@gmail.com</p>
+               <p></p>
+               <h3>Locations/regions:</h3>
+               <p>Utrecht</p>
+               <p>Den Haag</p>
+               <p>Gouda</p>
+               <p>Alphen aan den Rijn</p>
+               <p>Rotterdam</p>
+               <p>Amsterdam</p>
+               <p>Leiden</p>
+            </div>
+         </div>
+      </div>
+   </section>
 </div>
