--- a/app/views/shared/_navbar-transparent.html.erb
+++ b/app/views/shared/_navbar-transparent.html.erb
@@ -1,5 +1,5 @@
 <div class="nav-container">
-   <div class="bg-dark navbar-dark" data-sticky="top">
+   <div class="position-absolute navbar-dark" data-sticky="top">
       <div class="container">
          <nav class="navbar navbar-expand-lg">
             <%= link_to root_path, class: "navbar-brand" do %>
