--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,3 +1,5 @@
-<div class="container">
+<%= render 'shared/navbar' %>
+<%= render 'shared/flashes' %>
+<div class="main-container">
 <%= render 'student_form' %>
 </div>
