--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,20 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= image_path "annie-picture1.jpg" %>);">
-  <div class="banner-content btm-margin">
-    <h1>Wright Piano School</h1>
-    <p>Learn from the best! The Hague, Rotterdam, Utrecht, Leiden, Amsterdam</p>
-    <%= link_to "Apply Now!", new_student_path, class: "btn btn-primary btn-lg" %>
-  </div>
+<%= render 'shared/navbar-transparent' %>
+<%= render 'shared/flashes' %>
+<div class="main-container">
+   <section class="bg-dark height-100">
+     <%= image_tag "annie-picture1.jpg", class: "bg-image opacity-30" %>
+      <div class="container">
+         <div class="row justify-content-center text-center">
+            <div class="col-12 col-md-10 col-lg-7">
+               <h1 class="display-4">Wright Piano School</h1>
+               <p class="lead text-light">Learn from the best! The Hague, Rotterdam, Utrecht, Leiden, Amsterdam</p>
+               <%= link_to "Apply Now", new_student_path, class: "btn btn-lg btn-success" %>
+            </div>
+            <!--end of col-->
+         </div>
+         <!--end of row-->
+      </div>
+      <!--end of container-->
+   </section>
+   <!--end of section-->
 </div>
