--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,28 +1,39 @@
-<div class="container">
-<h1>Teachers</h1>
-<p>Please click on a teacher to display their full information!</p>
-
-<div class="container">
-  <div class="row">
-  </div>
-</div>
-<% @teachers.each do |teacher| %>
-<%= link_to teacher_path(teacher) do %>
-<div class="col-xs-12 col-sm-6 col-md-4">
-<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2))
-<% if teacher.photo? %>, url('<%= cl_image_path teacher.photo.path, height: 300, width: 400, crop: :fill, gravity: :face %>')<% end %>">
-  <div class="card-category"><p><%= teacher.location %></p></div>
-  <div class="card-description">
-    <h2><%= "#{teacher.first_name} #{teacher.last_name}" %></h2>
-
-
-  </div>
-
-
-</div>
-</div>
-<% end %>
-<% end %>
-</div>
-  </div>
+<%= render 'shared/navbar' %>
+<%= render 'shared/flashes' %>
+<div class="main-container">
+   <section class="">
+      <div class="container">
+         <div class="row justify-content-center text-center section-intro">
+            <div class="col-12 col-md-9 col-lg-8">
+               <h1>Teachers</h1>
+               <p>Please click on a teacher to display their full information!</p>
+            </div>
+         </div>
+      </div>
+   </section>
+   <section class="flush-with-above">
+      <div class="container">
+         <!--end of row-->
+         <div class="row no-gutters justify-content-center">
+            <div class="col-12 col-lg-10">
+               <ul class="feature-list row justify-content-center">
+                  <% @teachers.each do |teacher| %>
+                  <li class="col-6 col-lg-4">
+                     <%= link_to teacher_path(teacher) do %>
+                     <% if teacher.photo? %>, url('<%= cl_image_path teacher.photo.path, class: "img-fluid rounded mb-3", gravity: :face %>')<% end %>">
+                     <% end %>
+                     <h5 class="mb-0"><%= "#{teacher.first_name} #{teacher.last_name}" %></h5>
+                     <span><%= teacher.location %></span>
+                  </li>
+                  <% end %>
+               </ul>
+               <!--end of row-->
+            </div>
+            <!--end of col-->
+         </div>
+         <!--end of row-->
+      </div>
+      <!--end of container-->
+   </section>
+   <!--end of section-->
 </div>
