--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,7 +31,7 @@
                </ul>
                <ul class="navbar-nav">
                   <li class="nav-item">
-                     <%= link_to "Apply Now", new_student_path %>
+                     <%= link_to "Apply Now", new_student_path, class: "btn btn-outline-primary" %>
                   </li>
                </ul>
             </div>
