--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,39 +1,35 @@
 <%= render 'shared/navbar' %>
 <%= render 'shared/flashes' %>
 <div class="main-container">
-   <section class="">
-      <div class="container">
-         <div class="row justify-content-center text-center section-intro">
-            <div class="col-12 col-md-9 col-lg-8">
-               <h1>Teachers</h1>
-               <p>Please click on a teacher to display their full information!</p>
-            </div>
-         </div>
+  <section class="">
+    <div class="container">
+      <div class="row justify-content-center text-center section-intro">
+        <div class="col-12 col-md-9 col-lg-8">
+          <h1>Teachers</h1>
+          <p>Please click on a teacher to display their full information!</p>
+        </div>
       </div>
-   </section>
-   <section class="flush-with-above">
-      <div class="container">
-         <!--end of row-->
-         <div class="row no-gutters justify-content-center">
-            <div class="col-12 col-lg-10">
-               <ul class="feature-list row justify-content-center">
-                  <% @teachers.each do |teacher| %>
-                  <li class="col-6 col-lg-4">
-                     <%= link_to teacher_path(teacher) do %>
-                     <% if teacher.photo? %>, url('<%= cl_image_path teacher.photo.path, class: "img-fluid rounded mb-3", gravity: :face %>')<% end %>">
-                     <% end %>
-                     <h5 class="mb-0"><%= "#{teacher.first_name} #{teacher.last_name}" %></h5>
-                     <span><%= teacher.location %></span>
-                  </li>
-                  <% end %>
-               </ul>
-               <!--end of row-->
-            </div>
-            <!--end of col-->
-         </div>
-         <!--end of row-->
+    </div>
+  </section>
+  <section class="flush-with-above">
+    <div class="container">
+      <!--end of row-->
+      <div class="row no-gutters justify-content-center">
+        <div class="col-12 col-lg-10">
+          <ul class="feature-list row">
+            <li class="col-6 col-lg-4">
+              <%= image_tag "1.jpg", class: "img-fluid rounded mb-3" %>
+              <h5 class="mb-0">Andrew Wright</h5>
+              <span>The Hague</span>
+            </li>
+          </ul>
+          <!--end of row-->
+        </div>
+        <!--end of col-->
       </div>
-      <!--end of container-->
-   </section>
-   <!--end of section-->
+      <!--end of row-->
+    </div>
+    <!--end of container-->
+  </section>
+  <!--end of section-->
 </div>
