--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -14,23 +14,23 @@
   <section class="flush-with-above">
     <div class="container">
       <!--end of row-->
-      <div class="row no-gutters justify-content-center">
-        <div class="col-12 col-lg-10">
-          <ul class="feature-list row">
+
+        <div class="card-columns">
             <% @teachers.each do |teacher| %>
-              <%= link_to teacher_path(teacher) do %>
-            <li class="col-6 col-lg-4">
+            <%= link_to teacher_path(teacher) do %>
+              <div class="card">
               <% if teacher.photo? %>
-                <%= cl_image_tag teacher.photo.path, height: 300, width: 400, crop: :fill, gravity: :face, class: "img-fluid rounded mb-3" %>
+              <%= cl_image_tag teacher.photo.path, height: 480, width: 480, crop: :fill, gravity: :face, class: "img-fluid rounded mb-3 card-img" %>
+              <% else %>
+                <%= image_tag "placeholder.png", class: "image-fluid rounded mb-3 card-img" %>
               <% end %>
+              <div class="card-footer">
               <h5 class="mb-0"><%= "#{teacher.first_name} #{teacher.last_name}" %></h5>
               <span><%= teacher.location %></span>
-            </li>
+            </div></div>
             <% end %>
             <% end %>
-          </ul>
           <!--end of row-->
-        </div>
         <!--end of col-->
       </div>
       <!--end of row-->
